# mmcifbuddy

./: LICENSE  Makefile  README.md  README.org  create_version_h.py  lex.yy.c  mmcif.lex  mmcif_test.c  mmciflexer.h  mmciflexermodule.c  pyproject.toml  setup.py  test_enum.c  test_strtok_r.c  timer.py  updateversion.py
mmcifbuddy/: __init__.py  common.py  filereader.py  flat_parser.py  logger.py  parser.py  parser_flat.py  timer.py
mmcifbuddy/mmciflexer/: __init__.py
mmciflexer/: __init__.py
mmcifreader/: __init__.py  common.py  convert.py  filereader.py  flat_parser.py  parser.py  simple_parser.py  states.py  timer.py
mmcifreader/mmciflexer/: __init__.py
mmcifreader/tests/: test_convert.py
src/: Makefile  create_version_h.py  lex.mmcif.c  mmcif.lex  mmciflexer.h  mmciflexermodule.c  numpy-config.py  sneaky_fopen.c  test_enum.c  test_mmcif_lex.c  version.h
src/tests/: Makefile
test/: 4af1.cif  chem_comp.cif  semicolon.cif  test_chem_comp.py  test_parser.py  test_parser_flat.py  test_semicolon.py  test_two_datablocks.py  two_datablocks.cif
