[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mmcifbuddy"
authors = [{name = "Morten Kjeldgaard", email = "mortenkjeldgaard@gmail.com"}]
description = "Fast and easy to use Python module to parse mmCIF files"
readme = "README.org"
requires-python = ">=3.10"
license = {file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: European Union Public License 1.2",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator"
    ]
dynamic = ["version"]
dependencies = []

[tool.setuptools]
packages =  ["mmcifbuddy", "mmcifbuddy.mmciflexer"]

[tool.setuptools.dynamic]
version = {attr = "mmcifbuddy.__version__"}
