[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mmcifbuddy"
authors = [{name = "Morten Kjeldgaard", email = "mortenkjeldgaard@gmail.com"}]
description = "Fast and easy to use Python module to parse mmCIF files"
readme = "README.md"
requires-python = ">=3.10"
license = {file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]
dynamic = ["version"]
dependencies = []

[tool.setuptools]
packages =  ["mmcifbuddy", "mmcifbuddy.mmciflexer"]

[tool.setuptools.dynamic]
version = {attr = "mmcifbuddy.__version__"}

[tool.pytest.ini_options]
#addopts = "-ra -q"
addopts = "-v -s"
testpaths = [
    "test",
]
